MishyFLY/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
17
-classpath
C:\Program Files (x86)\lib\greenfoot.jar;C:\Program Files (x86)\lib\javafx-base-20.0.1-win.jar;C:\Program Files (x86)\lib\javafx-base-20.0.1.jar;C:\Program Files (x86)\lib\javafx-controls-20.0.1-win.jar;C:\Program Files (x86)\lib\javafx-controls-20.0.1.jar;C:\Program Files (x86)\lib\javafx-fxml-20.0.1-win.jar;C:\Program Files (x86)\lib\javafx-graphics-20.0.1-win.jar;C:\Program Files (x86)\lib\javafx-graphics-20.0.1.jar;C:\Program Files (x86)\lib\javafx-media-20.0.1-win.jar;C:\Program Files (x86)\lib\javafx-media-20.0.1.jar;C:\Program Files (x86)\lib\javafx-swing-20.0.1-win.jar;C:\Program Files (x86)\lib\javafx-web-20.0.1-win.jar;C:\Program Files (x86)\lib\junit-4.12.jar;C:\Program Files (x86)\lib\junit-jupiter-5.5.2.jar;C:\Program Files (x86)\lib\junit-jupiter-api-5.5.2.jar;C:\Program Files (x86)\lib\junit-jupiter-engine-5.5.2.jar;C:\Program Files (x86)\lib\junit-jupiter-params-5.5.2.jar;C:\Program Files (x86)\lib\junit-platform-commons-1.5.2.jar;C:\Program Files (x86)\lib\junit-platform-engine-1.5.2.jar;C:\Program Files (x86)\lib\junit-platform-launcher-1.5.2.jar;C:\Program Files (x86)\lib\junit-platform-suite-api-1.5.2.jar;C:\Program Files (x86)\lib\junit-vintage-engine-5.5.2.jar;C:\Program Files (x86)\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\lib\opentest4j-1.2.0.jar;C:\Program Files (x86)\lib\bluej.jar;C:\Program Files (x86)\lib\classgraph-4.8.90.jar;C:\Program Files (x86)\lib\diffutils-1.2.1.jar;C:\Program Files (x86)\lib\commons-logging-1.2.jar;C:\Program Files (x86)\lib\jl1.0.1.jar;C:\Program Files (x86)\lib\opencsv-2.3.jar;C:\Program Files (x86)\lib\opencsv-2.4.jar;C:\Program Files (x86)\lib\xom-1.3.7.jar;C:\Program Files (x86)\lib\lang-stride.jar;C:\Program Files (x86)\lib\nsmenufx-2.1.8.jar;C:\Program Files (x86)\lib\wellbehavedfx-0.3.3.jar;C:\Program Files (x86)\lib\guava-17.0.jar;C:\Program Files (x86)\lib\simple-png-0.2.0.jar;C:\Program Files (x86)\lib\simple-png-javafx-0.2.0.jar;C:\Program Files (x86)\lib\httpclient-4.5.13.jar;C:\Program Files (x86)\lib\httpcore-4.4.13.jar;C:\Program Files (x86)\lib\httpmime-4.1.1.jar;C:\Program Files (x86)\lib\javafx\javafx.base.jar;C:\Program Files (x86)\lib\javafx\javafx.controls.jar;C:\Program Files (x86)\lib\javafx\javafx.fxml.jar;C:\Program Files (x86)\lib\javafx\javafx.graphics.jar;C:\Program Files (x86)\lib\javafx\javafx.media.jar;C:\Program Files (x86)\lib\javafx\javafx.properties.jar;C:\Program Files (x86)\lib\javafx\javafx.swing.jar;C:\Program Files (x86)\lib\javafx\javafx.web.jar;C:\Users\imeji\Downloads\MishyFLY-20240402T202508Z-001\MishyFLY
-d
C:\Users\imeji\Downloads\MishyFLY-20240402T202508Z-001\MishyFLY\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\imeji\Downloads\MishyFLY-20240402T202508Z-001\MishyFLY\MyWorld.java
<---- end of javadoc command ---->
Loading source file C:\Users\imeji\Downloads\MishyFLY-20240402T202508Z-001\MishyFLY\MyWorld.java...
C:\Users\imeji\Downloads\MishyFLY-20240402T202508Z-001\MishyFLY\MyWorld.java:42: error: ';' expected
           setWorld()
                     ^
1 error
